--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "alpinejs": "^3.13.10",
         "highlight.js": "^11.9.0",
         "shiki": "^1.1.7"
     }
